force-app/main/default/objects/HO_Baseline__c/HO_Baseline__c.object-meta.xml
<CustomObject>
    <label>HOベースライン</label>
    <pluralLabel>HOベースライン</pluralLabel>
    <description>テストデータ生成直後のスナップショット。更新前後の差分チェックに使用</description>
    <nameField>
        <label>番号</label>
        <type>AutoNumber</type>
        <displayFormat>BL-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>