force-app/main/default/objects/HO_Baseline__c/fields/Seed_Key__c.field-meta.xml
<CustomField>
    <fullName>Seed_Key__c</fullName>
    <label>シードキー</label>
    <description>HO_Seed_Key__c の値</description>
    <type>Text</type>
    <length>40</length>
    <externalId>true</externalId>
</CustomField>