force-app/main/default/objects/HO_Baseline__c/fields/Snapshot_JSON__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_JSON__c</fullName>
    <label>スナップショットJSON</label>
    <description>比較対象項目の値(JSON)</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>