force-app/main/default/objects/HO_Baseline__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>対象オブジェクト</label>
    <description>オブジェクトAPI名</description>
    <type>Text</type>
    <length>80</length>
</CustomField>